[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/LevelsCreator/components/WallTailMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/LevelsCreator/components/Box.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/LevelsCreator/components/Spot.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/LevelsDone/hard/Level0/LevelHardBlank.gd" type="Script" id=5]
[ext_resource path="res://assets/demo/yoster-island.regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/MainMenu/Options/Fps.tscn" type="PackedScene" id=7]



[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.498039, 0.129412, 0.129412, 1 )
border_width_left = 8
border_width_right = 8
border_color = Color( 0.498039, 0.129412, 0.129412, 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 1 )
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 1 )
Button/styles/pressed = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 6 )

[node name="Level6" type="Node2D"]
script = ExtResource( 5 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 131072, 2, 0, 131072, 3, 0, 0, 4, 0, 131072, 5, 0, 65536, 6, 0, 65536, 7, 0, 0, 8, 0, 131072, 9, 0, 131072, 10, 0, 131072, 11, 0, 131072, 12, 0, 0, 13, 0, 131072, 14, 0, 262144, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65536, 0, 131072, 65537, 0, 262144, 65538, 0, 131072, 65539, 0, 0, 65540, 0, 131072, 65541, 0, 131072, 65542, 0, 0, 65543, 0, 131072, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 65536, 65548, 0, 131072, 65549, 0, 131072, 65550, 0, 262144, 65551, 0, 0, 65552, 0, 0, 65553, 0, 131072, 65554, 0, 131072, 65555, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 196608, 131075, 0, 131072, 131076, 0, 196608, 131077, 0, 0, 131078, 0, 262144, 131079, 0, 131072, 131080, 0, 131072, 131081, 0, 131072, 131082, 0, 0, 131083, 0, 0, 131084, 0, 131072, 131085, 0, 131072, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 131072, 131091, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196623, 0, 196608, 196624, 0, 0, 196625, 0, 262144, 196626, 0, 0, 196627, 0, 196608, 262144, 0, 65536, 262145, 0, 0, 262146, 0, 131072, 262160, 0, 131072, 262161, 0, 0, 262162, 0, 131072, 262163, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 262144, 327697, 0, 262144, 327698, 0, 131072, 327699, 0, 131072, 393216, 0, 131072, 393217, 0, 131072, 393218, 0, 0, 393233, 0, 0, 393234, 0, 131072, 393235, 0, 65536, 458752, 0, 0, 458753, 0, 262144, 458754, 0, 0, 458755, 0, 131072, 458756, 0, 0, 458769, 0, 65536, 458770, 0, 0, 458771, 0, 0, 524288, 0, 65536, 524289, 0, 0, 524290, 0, 131072, 524291, 0, 0, 524292, 0, 131072, 524293, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 589824, 0, 131072, 589825, 0, 0, 589826, 0, 131072, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 131072, 589833, 0, 0, 589834, 0, 131072, 589835, 0, 131072, 589836, 0, 131072, 589837, 0, 0, 589838, 0, 131072, 589839, 0, 262144, 589840, 0, 0, 589841, 0, 131072, 589842, 0, 0, 589843, 0, 0, 655360, 0, 0, 655361, 0, 131072, 655362, 0, 131072, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 131072, 655368, 0, 131072, 655369, 0, 131072, 655370, 0, 131072, 655371, 0, 65536, 655372, 0, 0, 655373, 0, 131072, 655374, 0, 65536, 655375, 0, 0, 655376, 0, 0, 655377, 0, 196608, 655378, 0, 65536, 655379, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 131072, 720906, 0, 131072, 720907, 0, 131072, 720908, 0, 0, 720909, 0, 0, 720910, 0, 131072, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="boxes" type="Node2D" parent="."]

[node name="Box2" parent="boxes" instance=ExtResource( 2 )]
position = Vector2( 112, 96 )

[node name="spots" type="Node2D" parent="."]

[node name="Spot7" parent="spots" instance=ExtResource( 4 )]
position = Vector2( 192, 64 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 160, 112 )

[node name="ui" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="ui"]
margin_left = 112.0
margin_top = 64.0
margin_right = 220.0
margin_bottom = 122.0
window_title = ":D"
dialog_text = "Level cleard!"

[node name="AcceptDialog2" type="AcceptDialog" parent="ui"]
margin_left = 35.4079
margin_top = 58.8409
margin_right = 288.408
margin_bottom = 116.841
window_title = ":D"
dialog_text = "You ran out of moves try again :("
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="ui"]
margin_left = 17.9843
margin_top = 19.1748
margin_right = 66.9843
margin_bottom = 33.1748
custom_fonts/font = SubResource( 4 )
text = "Veeeeeeeeeeryyy Hard 6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovesLeft" type="Label" parent="ui"]
margin_left = 18.4126
margin_top = 150.953
margin_right = 114.413
margin_bottom = 164.953
custom_fonts/font = SubResource( 4 )
text = "Moves Left: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="ui"]
margin_left = 218.425
margin_top = 15.627
margin_right = 314.425
margin_bottom = 29.627
custom_fonts/font = SubResource( 4 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fps" parent="." instance=ExtResource( 7 )]
[connection signal="confirmed" from="ui/AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
[connection signal="confirmed" from="ui/AcceptDialog2" to="." method="_on_AcceptDialog2_confirmed"]
